@@ -1,3 +1,11 @@
+2004-07-13  Kim Ho  <kho@redhat.com>
+
+	* javax/swing/JRootPane.java:
+	Ran jalopy.
+	(layoutContainer): Set the glasspane's size to 
+	be the same as the content pane.
+	(createGlassPane): Set opaque property to false.
+
 2004-07-13  Olga Rodimina  <rodimina@redhat.com>
 
 	* javax/swing/JCheckBoxMenuItem.java: Fixed Javadocs.
